# lcov_filter

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  lib_tests.rs  main.rs
tests/: cli_exit_code_tests.rs
